[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eclipseiuparser"
version = "0.0.1"
dependencies = [
  "networkx>2.8.7",
]
requires-python = ">=3.8"
authors = [
  {name = "Gulevich Vasili", email = "basilevs@gmail.com"}
]
description = "Parse Eclipse Platform features and bundles from source and packages and analyse dependency graph"
readme = "README.md"
license = "EPL-2.0"
license-files = ["LICEN[CS]E.*"]
keywords = ["Eclipse", "MANIFEST.MF"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[tool.hatch.build.targets.wheel]
packages=["eclipseiuparser"]

[project.urls]
Homepage = "https://github.com/basilevs/eclipseiuparser"
Documentation = "https://github.com/basilevs/eclipseiuparser"
Repository = "https://github.com/basilevs/eclipseiuparser.git"
"Bug Tracker" = "https://github.com/basilevs/eclipseiuparser/issues"
Changelog = "https://github.com/basilevs/eclipseiuparser/commits/master/"

[project.scripts]
where = "eclipseiuparser.where:main"
common_dependencies = "eclipseiuparser.common_dependencies:main"
compare = "eclipseiuparser.compare:main"
contents = "eclipseiuparser.contents:main"
dependencies = "eclipseiuparser.dependencies:main"
feature_xml_to_target = "eclipseiuparser.feature_xml_to_target:main"
intersect = "eclipseiuparser.intersect:main"
predecessors = "eclipseiuparser.predecessors:main"
rdepends = "eclipseiuparser.rdepends:main"
why = "eclipseiuparser.why:main"

